<resources>
    <string name="Name">کتابفروشی دانش</string>
    <string name="navigation_drawer_close">close</string>
    <string name="navigation_drawer_open">close</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="title_activity_basket_activity">Basket_activity</string>
    <string name="site">https://www.danesh-book.ir</string>
    <!--<string name="site">http://5.9.213.180</string>-->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="special_sell">تخفيف شگفت انگيز</string>
    <string name="new_Item">جدیدترین کتابها</string>
    <string name="all_Item">نمایش همه</string>
    <string name="drawer1">درباره ما</string>
    <string name="drawer2">تماس به ما</string>
    <string name="drawer3">درباره طراح برنامه</string>
    <string name="contact1">09132243308</string>
    <string name="search_hint">جستجوی کتاب مورد نظر</string>
    <string name="search">جستجو در کتاب دانش</string>
    <string name="currency"> \u0020تومان\u0020</string>
    <string name="comment_hint"> نظر و نقد شما</string>
    <string name="set_scroll">امتیاز شما به این کتاب</string>
    <string name="save">ثبت</string>
    <string name="editProfile">ویرایش پروفایل</string>
    <string name="addCard">افزودن به سبد خرید</string>
    <string name="warning">توجه !!!</string>
    <string name="warning_message">لطفا در ابتدا وارد حساب کاربری خود شوید</string>
    <string name="SignupLogin">ورود/ ثبت نام</string>
    <string name="cancell">انصراف</string>
    <string name="sign_name">نام و نام خانوادگی</string>
    <string name="sign_mobile">شماره همراه</string>
    <string name="sign_tell">شماره ثابت</string>
    <string name="sign_address">آدرس</string>
    <string name="sign_postal">کد پستی</string>
    <string name="sign_password">رمز عبور</string>
    <string name="sign_email">ایمیل</string>
    <string name="set_email">لطفا ایمیل خود وارد نمائید</string>
    <string name="basket_empty">سبد خرید شما خالی است !!!</string>
    <string name="basket_delete">محصول شما از سبد خرید حذف شد</string>
    <string name="basket_deleted">محصول شما قبلا از سبد خرید حذف شده است</string>
    <string name="snackPlusItem">محصول به سبد خرید اضافه شد</string>
    <string name="snackNoItem">موجودی انبار کافی نمی باشد</string>
    <string name="rateOk">رای شما ثبت شد</string>
    <string name="rateNo">شما قبلا به این نظر رای داده اید</string>
    <string name="rateNo2">شما قبلا به این کتاب رای داده اید</string>
    <string name="commmentOk">نظر شما ثبت شد</string>
    <string name="noProduct">این کتاب وجود ندارد</string>
    <string name="noQuantity">موجودی این کتاب در انبار کافی نیست</string>
    <string name="fullText">لطفا متن مورد نظر خود را وارد کنید</string>
    <string name="shortText">لطفا طول کلمه مورد نظر  3 حرف یا بیشتر باشد</string>
    <string name="error_email">لطفا ایمیل خود را بطور صحیح وارد نمائید</string>
    <string name="error_name">لطفا  نام وارد نمائید</string>
    <string name="error_name_short">لطفا نام مورد نظر  3 حرف یا بیشتر باشد</string>
    <string name="error_address">لطفا آدرس خود را وارد نمائید</string>
    <string name="error_address_short">لطفا آدرس مورد نظر 10 حرف یا بیشتر باشد</string>
    <string name="error_tell">لطفا تلفن خود را بطور صحیح وارد نمائید</string>
    <string name="error_mobile">لطفا موبایل خود را بطور صحیح وارد نمائید</string>
    <string name="error_postal2">لطفا کد پستی خود را بطور صحیح وارد نمائید</string>
    <string name="error_password">لطفا رمز خود را بطور صحیح وارد نمائید</string>
    <string name="error_password_short">لطفا رمز مورد نظر  6 حرف یا بیشتر باشد</string>
    <string name="error_email_repetetive">ایمیل وارد شده قبلا ثبت شده است</string>
    <string name="error_mobile_repetetive">شماره همراه وارد شده قبلا ثبت شده است</string>
    <string name="signupOk">ثبت نام با موفقیت انجام شد</string>
    <string name="editProfileOk">ویرایش با موفقیت انجام شد</string>
    <string name="signupButton">ایجاد حساب کاربری</string>
    <string name="editProfileButton">ویرایش حساب کاربری</string>
    <string name="signupExplainHint">لطفا تمام شرایط و مراحل کاری خود را در این قسمت  بیان کنید</string>
    <string name="emailOk">ایمیل شما با موفقیت ثبت شد</string>
    <string name="emailError">خطا در ثبت ایمیل</string>
    <string name="RecoveryPassword">رمز عبور، به ایمیل شما ارسال خواهد شد</string>
    <string name="error_ostan">لطفا استان را وارد نمائید</string>
    <string name="error_shahr">لطفا شهر را وارد نمائید</string>
    <string name="rules">
کتابفروشی دانش فعالیت خودازسال 1361درزمینه کتابهای دانشگاهی وکمک درسی آغاز نمود .وآدرس ما نجف آباد خیابان شریعتی خیابان دانش بعد از شرکت تعاونی فرهنگییان مقابل ورزشگاه انقلاب وکد پستی 8513793515 وبا تلفنهای 03142612579 و03142620950
خریدارن محترم ,کتابفروشی دانش -دررشته های فنی مهندسی - فیزیک ومکانیک - ساختمان وعمران -موادومتالوروژی - تاریخ وجغرافی _ معارف وحقوق _ کامپیوتر _ برق والکترونیک ادبیات فارسی - جامعه شناسی - روانشناسی و....میباشد
خریداران محترم : انتخاب وخرید کتاب فقط ازطریق اینترنت امکان پذیراست وسفارش بصورت تلفنی وجود ندارد
خریداران محترم : سعی شده که موجودی کتابها به روزباشدوباتاخیرحدود یک ساعت بروز رسانی میشود. لذا ازگرفتن تماس تلفنی جدا" خودداری فرمایید
خریداران محترم : ارسال کتاب در داخل شهرستان از طریق پیک
خریدارن محترم لطفا" قبل از خرید کتاب مورد نظرخود کاملا دقت فرمایید, بخصوص سال چاپ , وهمچنین ویرایش کتاب ونویسنده وترجمه  آن ,کتاب انتخاب شده وخریداری شده بهیچ عنوان قابل تعویض نمیباشد. بااثتسنای کتابهای دارای اشکال چاپی (ناقص ازنظرصفحات کم یازیاد باشد)که کتاب مذکور ظرف مدت پنج روزکاری به فروشگاه مرجوع گردد تا یک جلد کتاب سالم به آدرس متقاضی ارسال گردد. هزینه پست کتابهای ناقص بعهده فروشگاه میباشد
خریداران محترم : امکان فروش کتاب به صورت تلفنی وجود ندارد وفقط به صورت حضوری یا اینترنتی امکان پذیرمیباشد
خریداران محترم : ارسال کتابهای خیرداری شده درسطح (داخل)نجف آبادازطریق پیک وبا هزینه مشتری وخارج نجف آباد ازطریق پست پیشتازیا سفارشی
به آدرس خریدارارسال میگردد
خریداران محترم : درهنگام خرید وانتخاب کلای مورد نظردرسایت ثبت نام فرمایید واطلاعات خواسته شده راشامل آدرس کامل ودقیق وتلفن همراه وکد پستی ده رقمی بطورکامل وارد فرمایید
خریداران محترم : درهنگاه درج کد پستی ده رقمی کاملا" دقت فرمایید که کد پستی صحیح وارد گردد ,تمامی مسئولیت ناشی ازاشتباه کد پستی بعهده شما خواهد بود ودرصورتیکه بازگشت مرسوله پستی بعلت درج اشتباه پستی به فروشگاه برگشت شود, هزینه ارسال مجدد بعهده خرداران محترم میباشد
خریداران محترم : درهنگام ثبت نام کدشهرستان وتلفن همراه هردورا ثبت فرمایید
خریداران محترم :که ساکن شهرستان نجف آبادهستند ازگزینه داخل شهرستان نجف آباد استفاده کنند وساکنین شهرستانهای دیگر یااستانهاکزینه مریوط به خودرا انتخاب کنند
خریداران محترم : ارسال خرید کتابهای خریداری شده درنقاط کشور فقط ازطریق پست جمهوری اسلامی ایران وبه صورت پیشتاز وسفارشی بعدازاولین روزکاری ثبت سفارش ,مرسوله ارسال خواهد شد
خریداران محترم : درهنگام انتخاب وخرید کتاب مورد نظر خود به زمان حداکثر5روز دقت فرمایید
خرداران محترم : ارسال کتاب ازطریق پست براساس وزن ومسافت مقصد توسط ادراه پست محاسبه ودریافت میگردد
خریداران محترم جدول محاسبات ودریافت توسط پیک موتوری(داخل شهرنجف آباد ) به شرح ذیل میباشد
خرید اران محترم هزینه پشتی داخل شهرنجف آباد مبلغ شش هزارتومان وسایرشهرستانها براهرجلد هفت هزارتومان محاسبه وبه مبلغ کل اضافه می گردد
خریدارن محترم:  شما میتوانیدکتاب مورد نظر خود را خرید  وآن را رزرو فرمایید وکتاب را از فروشگاه واقع در نجف آباد خیابان شریعتی خیابان دانش بعد ازشرکت تعاونی فرهنگییان مقابل ورزشگاه انقلاب تحویل فرمایید
خریدارن محترم : پس از انتقال به درگاه بانک وورود اطلاعات کارت وکسر مبلغ خواهشمند است گزینه تکمیل وخرید وانتقال به سایت پذیرنده کلیک فرمایید وکدرهگیری پس از ثبت سفارش خودرا به یقین دریافت فرمایید
خریداران محترم : پس از پرداخت وثبت نهایی سفارش امکان لغو سفارش تحت هیچ شرایطی امکان پذیر نیست , لطفا" قبل از خرید وثبت نهایی کاملا دقت فرمایید</string>

</resources>
