<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignupActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout6"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:background="@color/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/background_insert_ads"
        app:layout_constraintBottom_toBottomOf="@+id/constraintLayout5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout6"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/signinBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:theme="@style/BlueAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="202dp">

                <EditText
                    android:id="@+id/emailEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/input_layout_metrajh"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/iransans"
                    android:hint="@string/sign_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:textAlignment="textStart"
                    android:textDirection="ltr"
                    android:textSize="12sp"
                    android:theme="@style/BlueAccent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:theme="@style/BlueAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17">

                <EditText
                    android:id="@+id/passwordEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/input_layout_metrajh"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/iransans"
                    android:hint="@string/sign_password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:textAlignment="textEnd"
                    android:textDirection="rtl"
                    android:textSize="12sp"
                    android:theme="@style/BlueAccent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:theme="@style/BlueAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="202dp">

                <EditText
                    android:id="@+id/nameEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/input_layout_metrajh"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/iransans"
                    android:hint="@string/sign_name"
                    android:inputType="text"
                    android:maxLength="50"
                    android:textAlignment="textStart"
                    android:textDirection="rtl"
                    android:textSize="12sp"
                    android:theme="@style/BlueAccent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_title4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:theme="@style/BlueAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="202dp">

                <EditText
                    android:id="@+id/mobileEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/input_layout_metrajh"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/iransans"
                    android:hint="@string/sign_mobile"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:textAlignment="textStart"
                    android:textDirection="rtl"
                    android:textSize="12sp"
                    android:theme="@style/BlueAccent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_title5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:theme="@style/BlueAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17">

                <EditText
                    android:id="@+id/tellEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/input_layout_metrajh"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/iransans"
                    android:hint="@string/sign_tell"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:textAlignment="textStart"
                    android:textDirection="rtl"
                    android:textSize="12sp"
                    android:theme="@style/BlueAccent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_title6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:theme="@style/BlueAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView17">

                <EditText
                    android:id="@+id/addressEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/input_layout_metrajh"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/iransans"
                    android:hint="@string/sign_address"
                    android:inputType="text"
                    android:maxLength="70"
                    android:textAlignment="textStart"
                    android:textDirection="rtl"
                    android:textSize="12sp"
                    android:theme="@style/BlueAccent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_title7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:theme="@style/BlueAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="122dp">

                <EditText
                    android:id="@+id/postalEdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/input_layout_metrajh"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:fontFamily="@font/iransans"
                    android:hint="@string/sign_postal"
                    android:inputType="number"
                    android:maxLength="10"
                    android:textAlignment="textStart"
                    android:textDirection="rtl"
                    android:textSize="12sp"
                    android:theme="@style/BlueAccent" />
            </android.support.design.widget.TextInputLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="7dp">

                <Button
                    android:id="@+id/signinBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="35dp"
                    android:layout_marginStart="35dp"

                    android:background="@drawable/background_button_corner_blue"
                    android:fontFamily="@font/iransansbold"
                    android:text="@string/signupButton"
                    android:textColor="#ffffff"
                    android:textSize="13sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />

                <ProgressBar
                    android:id="@+id/progressBarPLus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:elevation="2dp"
                    android:indeterminateDrawable="@drawable/progress_bar"
                    android:theme="@style/BlueAccent"
                    app:layout_constraintBottom_toBottomOf="@+id/signinBtn"
                    app:layout_constraintEnd_toEndOf="@+id/signinBtn"
                    app:layout_constraintStart_toStartOf="@+id/signinBtn"
                    app:layout_constraintTop_toTopOf="@+id/signinBtn" />

            </android.support.constraint.ConstraintLayout>
        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/kian" />
</android.support.constraint.ConstraintLayout>